# disease-simulation

./: CMakeLists.txt  Dockerfile  README.md  lab_graph.ipynb  simulation_data.csv  simulation_data_10.csv  simulation_data_5.csv
configExample/: disease_details.csv  disease_in.ini  disease_stats.csv
examples/deterministic/: disease_in.ini
examples/many_populations/: disease_in.ini
examples/single_population/: disease_in.ini
include/: INIReader.h
simulation/: main.cpp  simulation.cpp  simulation.h  simulation_data.csv  test.cpp
